--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,9 @@ html,body{
 .container2{
     height: 480px;
      display: flex;
-    /* align-items: center;  */
-    /* justify-content: space-around; */
+     /* flex-direction: row; */
+    /* align-items: center; 
+    justify-content: space-around; */
 }
 
 .container3{
@@ -287,4 +288,10 @@ padding-top: -200px;
 
 .rndinfo{
     margin-top:30px;
+    margin-left: 480px;
+}
+
+.imgs{
+display:flex;
+list-style-type: none;
 }
