--- a/styles.css
+++ b/styles.css
@@ -299,7 +299,8 @@ padding-top: -200px;
 .rndinfo{
     /* margin-top:30px;
     margin-left: 480px; */
-    position: relative; top: 70px; left: 500px;
+    position: relative; top: 70px;
+    text-align: center;
 }
 
 .imgs{
