--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 html,body{
     height: 100vh;
     width: 100%;
+    background-color: transparent;
 }
-*{
-    font-family: roboto;
-}
+
 
 .button-1{
     color: white;
@@ -63,7 +62,6 @@ html,body{
 }
 
 .container4{
-    /* background-color: #3882f6; */
     height: 330px;
     display: flex;
     justify-content: center;
@@ -72,7 +70,6 @@ html,body{
 
 .header{
     display: flex;
-    /* justify-content: flex-end; */
 
 
 }
@@ -88,8 +85,6 @@ html,body{
 .header-logo{
     color: #f9faf8;
     font-size: 36px;
-    /* font-weigt: bold; */
-    /* margin-right: auto; */
     margin-left: 130px;
     margin-top: -40px;
     display: flex;
@@ -99,11 +94,11 @@ html,body{
 .hlinks {
     color: #e5e7eb;
     font-size: 18px;
-    color: white;
     font-weight: lighter;
-    font-size: 18;
-    margin-left: 450px;
+    margin-left: 400px;
     text-decoration: none;
+    display: flex;
+
 }
 
 .headerlinks-1{
@@ -128,7 +123,6 @@ footer{
     background-color: #1f2937;
     height: 100px;
     text-align: center;
-
 }
 
 .footerp{
@@ -144,8 +138,10 @@ footer{
 
 a{
     color: #e5e7eb;
-
+    text-decoration:none;
 }
+
+
 
 a:hover{
     color:salmon;
@@ -161,19 +157,8 @@ a:hover{
     color: black;
 }
 
-.hlinks{
-    display: flex;
-}
 
-/* h5{
-    color: #f9faf8;
-    font-size: 22px;
-    margin-bottom: 0px;
-    margin-left: 230px;
-    font-weight: bolder;
-    margin-top: 23px;
-    
-} */
+
 
 .test1{
     color: #f9faf8;
@@ -185,17 +170,11 @@ a:hover{
     
 }
 
-/* .c2c{
-    color: #e5e7eb;
-    margin-left: 230px;
-    mardin-top: -90px;
-    font-size: 18px;
-    
-} */
+
 
 .test2{
     color: #e5e7eb;
-    margin-left: 230px;
+    margin-left: 100px;
     margin-top: -30px;
     font-size: 18px;
     font-weight: lighter;
@@ -210,7 +189,7 @@ font-size: 48px;
 
 
 h3{
-font-color: #1f2937;
+color: #1f2937;
 font: 300;
 font-style: italic;
 font-size: 36px;
@@ -220,7 +199,7 @@ margin-left: 155px;
 }
 
 h4{
-    font-color: #1f2937;
+    color: #1f2937;
     margin-right: 318px;
     margin-top: 300px;
 }
@@ -233,16 +212,8 @@ font-size: 18px;
 
 }
 
-a {
-    text-decoration:none;
- }
 
- .image{
-     width: 240px;
-     height: 240px;
-padding-left: 900px;
-padding-top: -200px;
-}
+
 
  .body-1{
     margin-left: 130px;
@@ -257,6 +228,16 @@ padding-top: -200px;
     margin-left: 130px;
  }
 
+ .img-0{
+    height: 300px;
+    width: 280px;
+    position: relative;
+    left: 850px;
+    bottom: 250px;
+    background: transparent;
+    border-radius: 20px;
+ }
+
 .img-1{
     border: 4px solid #3882F6;
     border-radius: 15px;
@@ -264,6 +245,8 @@ padding-top: -200px;
     height: 150px;
     margin-right: 140px;
     margin-top: 138px;
+    background-color: transparent;
+
 
 }
 
@@ -295,10 +278,17 @@ padding-top: -200px;
     margin-top: 138px;
 }
 
+.img-5{
+    /* border: 4px solid #3882F6; */
+    border-radius: 15px;
+    width: 100px;
+    height: 100px;
+    margin-right: 80px;
+    margin-top: 60px;
+}
+
 
 .rndinfo{
-    /* margin-top:30px;
-    margin-left: 480px; */
     position: relative; top: 70px;
     text-align: center;
 }
@@ -308,6 +298,37 @@ display:flex;
 list-style-type: none;
 }
 
+.images{
+    background: transparent;
+    height: 100%;
+    width: auto;
+    overflow: hidden;
+    
 
+}
 
+.img-5{
+width:150px;
+height:150px;
+background-size: contain;
+overflow: hidden;
+left: 50px;
+}
 
+.dog5{
+    position: relative;
+   right: 41px;
+}
+
+.img-1{
+    width:150px;
+    height:150px;
+    background-size: contain;
+    overflow: hidden;
+    left: 50px;
+    }
+    
+    .dog2{
+        position: relative;
+       right: 30px;
+    }
